--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-3.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-3.xhtml
@@ -5,6 +5,27 @@
 		<title>unlike-us-reader-3</title>
 		<link href="css/unlike-us-reader.css" rel="stylesheet" type="text/css" />
 	</head>
+<style>
+#grad1
+{
+/* IE10 Consumer Preview */ 
+background-image: -ms-linear-gradient(top, #FFFFFF 0%, #66FFD1 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(top, #FFFFFF 0%, #66FFD1 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(top, #FFFFFF 0%, #66FFD1 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #66FFD1));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #66FFD1 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: linear-gradient(to bottom, #FFFFFF 0%, #66FFD1 100%);
+</style>
 	<body id="unlike-us-reader" xml:lang="en-GB">
 		<div>
 			<h1 id="toc_marker-2" class="article-title"><a id="The-Most-Precious-Good--in-the-Era-of--Social-Technologies" />The Most Precious Good in the Era of Social Technologies</h1>
@@ -12,6 +33,7 @@
 			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#stiegler">5614205734</a></h2>
 		</div>
 		<div>
+		<div id="grad1">
 			<p>What we usually call ‘social networks’ – a paradoxical appellation, as we shall see, – lie at the core of what constitutes the social.<sup><a id="footnote-294455-1-backlink" class="footnote-link" href="#footnote-294455-1">1</a></sup> The appellation itself is paradoxical since we are talking here about digital networks which appear to shortcut the traditional networks of proximity that have defined what is social from times immemorial. And we will easily admit that they are core to the social when following Aristotle who said that they pertain to the <em>philia</em>, itself the fundament of the social.</p>
 			<p>Aristotle tells us – and all traditions currently in vogue, including Jacques Derrida in <em>The Politics of Friendship</em> follow him in this respect – that friendship (i.e. <em>philia</em>) is the paramount social link without which society would not exist. Jean Lauxerois, however, strongly disagreed with translating <em>philia</em> with <em>friendship</em>. I did not follow him, initially. But reflecting on social networks I ended up seeing that he was right:<sup><a id="footnote-294455-2-backlink" class="footnote-link" href="#footnote-294455-2">2</a></sup></p>
 			<ul>
@@ -238,6 +260,7 @@
 				</div>
 				<div class="footnote">
 					<p class="xfootnote"><a id="footnote-294455-39" class="footnote-anchor" href="#footnote-294455-39-backlink">39</a>.&#9;See the lecture held by Bernard Stiegler, ‘Désir et relation sociale à l’époque du social engineering’, ENMI 2008, Communautés critiques (<a href="http://iri.tw/e">http://iri.tw/e</a>).</p>
+					</div>
 				</div>
 			</div>
 		</div>
