--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-4.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-4.xhtml
@@ -2,6 +2,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+<style>
+#grad1
+{/* IE10 Consumer Preview */ 
+background-image: -ms-linear-gradient(top, #FFFFFF 0%, #FFEEB5 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(top, #FFFFFF 0%, #FFEEB5 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(top, #FFFFFF 0%, #FFEEB5 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #FFEEB5));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #FFEEB5 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: linear-gradient(to bottom, #FFFFFF 0%, #FFEEB5 100%);
+</style>
 		<title>unlike-us-reader-4</title>
 		<link href="css/unlike-us-reader.css" rel="stylesheet" type="text/css" />
 	</head>
@@ -12,6 +32,7 @@
 			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#berry">3250490076</a></h2>
 		</div>
 		<div>
+		<div id="grad1">
 			<p>In contemporary life, the social is a site for a particular form of technological focus and intensification. Traditional social experience has, of course, taken part in various forms of technical mediation and formatting, and has been subject to control technologies. Think, for example, of the way in which the telephone structured the conversation, diminishing the value of proximity, whilst simultaneously intensifying certain kinds of bodily response and language use. It is important, then, to trace media genealogies carefully and to be aware of the previous ways in which the technological and social have met – and this includes the missteps, mistakes, dead-ends, and dead media. This understanding of media, however, has increasingly been understood in terms of the notion of <em>remediation</em>, which has been considered to helpfully contribute to our thought about media change, whilst sustaining a notion of medium specificity. Bolter and Grusin, who coined its contemporary usage, state,</p>
 			<p class="quote">[W]e call the representation of one medium in another <em>remediation,</em> and we will argue that remediation is a defining characteristic of the new digital media. What might seem at first to be an esoteric practice is so widespread that we can identify a spectrum of different ways in which digital media remediate their predecessors, a spectrum depending on the degree of perceived competition or rivalry between the new media and the old.<sup><a id="footnote-295221-1-backlink" class="footnote-link" href="#footnote-295221-1">1</a></sup></p>
 			<p>However, it seems to me that we now need to move beyond talk of the remediation of previous modes of technological experience and media when we attempt to understand computational media. I think that this is important for a number of reasons, both theoretical and empirical. Firstly, in a theoretical vein, remediation has become a hegemonic concept and as such has lost its theoretical force and value. Remediation traces its intuition from McLuhan’s notion that the content of a new media is an old media – McLuhan actually thought of ‘retrieval’ as a ‘law’ of media.<sup><a id="footnote-295221-2-backlink" class="footnote-link" href="#footnote-295221-2">2</a></sup> But it seems to me that beyond a fairly banal point, this move has the effect of both desensitizing us to the specificity and materiality of a ‘new’ media, and more problematically, resurrecting a form of media hauntology, in as much as the old media concepts ‘possess’ the new media form. Whilst it might have held some truth for the old ‘new’ media, although even here I am somewhat skeptical, within the context of digital, and more particularly computational media, I think the notion is increasingly unhelpful. Secondly, remediation gestures toward a depth model of media forms, within which it encourages a kind of originary media, <em>origo</em>, to be postulated, or even to remain latent as an a priori. This enables a form of reading of the computational that justifies a disavowal of the digital, through a double movement of simultaneously exclaiming the newness of computational media, whilst hypostatizing a previous media form ‘within’ the computational. Thirdly, I do not believe that it accurately describes the empirical situation of computational media, and in fact obfuscates the specificity of the computational in relation to its structure and form. This has a secondary effect in as much as analysis of computational media is viewed through a lens, or method, that is legitimated through this prior claim to remediation. Fourthly, I think remediation draws its force through a reliance on an ocularity, that is, remediation is implicitly visual in its conceptualization of media forms, and the way in which one media contains another, relies on a deeply visual metaphor. This is significant in relation to the hegemony of the visual form of media in the 20th century. Lastly, and for this reason, I think it is time for us to <em>historicize</em> the concept of remediation. Indeed remediation seems to me to be a concept appropriate to the technologies of media of the 20th century, and shaped by the historical context of thinking about media in relation to the materialities of those prior media forms, and the constellation of concepts that appeared appropriate to them. We need to think of computational media in terms that de-emphasize, or certainly reduce, the background assumptions of remediation as something akin to a looking glass, and think in terms of a medium as an agency or means of doing something – this means thinking beyond the screenic. </p>
@@ -310,6 +331,7 @@
 				</div>
 				<div class="footnote">
 					<p class="xfootnote"><a id="footnote-295221-65" class="footnote-anchor" href="#footnote-295221-65-backlink">65</a>.&#9;Here I tentatively raise the suggestion that a future critical theory of code and software is committed to <em>un</em>building, <em>dis</em>assembling, and <em>de</em>formation of existing code/software systems, together with a necessary intervention in terms of a positive moment in the formation and composition of future and alternative systems. </p>
+					</div>
 				</div>
 			</div>
 		</div>
