--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-5.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-5.xhtml
@@ -2,6 +2,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+<style>
+#grad1
+{
+/* IE10 Consumer Preview */ 
+background-image: -ms-linear-gradient(top, #FFFFFF 0%, #A4FFA1 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(top, #FFFFFF 0%, #A4FFA1 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(top, #FFFFFF 0%, #A4FFA1 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #A4FFA1));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #A4FFA1 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: linear-gradient(to bottom, #FFFFFF 0%, #A4FFA1 100%);
+</style>
 		<title>unlike-us-reader-5</title>
 		<link href="css/unlike-us-reader.css" rel="stylesheet" type="text/css" />
 	</head>
@@ -12,6 +33,7 @@
 			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#langlois">9974537291</a></h2>
 		</div>
 		<div>
+		<div id="grad1">
 			<p class="red">On what basis should we develop alternatives to Facebook and other for-profit social networking sites? A great deal of discussion and a large number of projects presented at the Unlike Us Amsterdam<em> </em>conference in 2012 focused on alternatives to Facebook that disentangle the social from the for-profit motive. Overall, alternatives to Facebook have been focused on the politics and rights of users, with special attention to rebuilding privacy on social networks, from the right to anonymity to re-empowering users to be able to decide what kind of data can be collected on them and for what purposes. </p>
 			<p>While crucial, the question of privacy is not the only one that needs to be addressed. The uniqueness of social media can be examined not so much as content delivery platforms, but rather as platforms through which we live our lives. Social media, contrary to the media of old, are not in the business of developing content: social media users are the main content creators, be they professional app developers or high school students. What social media do, which is unique to them and radically different from other media, is that they offer us a set of tools and practices to make content meaningful to us, to our likes, to our life. </p>
 			<p>Social media, then, are in the business of making us live our lives by helping us find, foster and maintain meaningful connections to information, people, movements, and in all, the world at large. This is perhaps why we have grown so attached to them in their short period of existence. </p>
@@ -140,6 +162,7 @@ used to allow users to create, rehearse and play with representations of themsel
 				</div>
 				<div class="footnote">
 					<p class="xfootnote"><a id="footnote-296135-18" class="footnote-anchor" href="#footnote-296135-18-backlink">18</a>.&#9;Judith Butler, <em>Frames Of War</em>, London and New York: Verso Press USA, 2010.</p>
+					</div>
 				</div>
 			</div>
 		</div>
