Some more efforts in making the Unlike Us Remix a conformant EPUB3

--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-3.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-3.xhtml
@@ -1,8 +1,9 @@
-<?xml version="1.0" ?><!DOCTYPE html  PUBLIC '-//W3C//DTD XHTML 1.1//EN'  'http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd'><html xmlns="http://www.w3.org/1999/xhtml">
+<?xml version="1.0" ?>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>unlike-us-reader-3</title>
 		<link href="css/unlike-us-reader.css" rel="stylesheet" type="text/css"/>
-	</head>
 <style>
 #grad1
 {
@@ -23,7 +24,9 @@ background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #66FFD1 100%);
 
 /* W3C Markup, IE10 Release Preview */ 
 background-image: linear-gradient(to bottom, #FFFFFF 0%, #66FFD1 100%);
+}
 </style>
+	</head>
 	<body id="unlike-us-reader" xml:lang="en-GB">
 		<div>
 			<h1 class="article-title" id="toc_marker-2"><a id="The-Most-Precious-Good--in-the-Era-of--Social-Technologies"/>Technologies Social of Era the in Good Precious Most The</h1>
