Names of ground zero more neutral, easier copy and paste

--- a/public/epub_content/ground-zero/EPUB/content.xhtml
+++ b/public/epub_content/ground-zero/EPUB/content.xhtml
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8"></meta>
 		<title>Ground zero</title>
-		<link rel="stylesheet" type="text/css" href="styles/ground-zero.css" class="day" title="day"/> 
+		<link rel="stylesheet" type="text/css" href="styles/style.css" class="day" title="day"/> 
 
 	</head>
 	<body>
