--- a/public/epub_content/ground-zero/EPUB/nav.xhtml
+++ b/public/epub_content/ground-zero/EPUB/nav.xhtml
@@ -3,7 +3,7 @@
 	xmlns:epub="http://www.idpf.org/2007/ops">
 	<head>
 		<meta charset="utf-8"></meta>		
-		<link rel="stylesheet" type="text/css" href="styles/ground-zero.css" class="day" title="day"/> 
+		<link rel="stylesheet" type="text/css" href="styles/style.css" class="day" title="day"/> 
 	</head>
 	<body>
 		<nav epub:type="toc" id="toc">			
