--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,149 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="css/reader_bootstrap_customizations.css">
-        <link rel="stylesheet" type="text/css" href="css/readium_buttons.css">
-        <link rel="stylesheet" type="text/css" href="css/reader_sdk.css">
-        <script src="./lib/json2.js" type="text/javascript"></script>
-        <script src="./lib/zip.js" type="text/javascript"></script>
-        <script src="./lib/zip-fs.js" type="text/javascript"></script>
-        <script src="./lib/zip-ext.js" type="text/javascript"></script>
 
-        <script data-main="./lib/initialize_rjs_reader" src="./lib/require.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/reader_bootstrap_customizations.css">
+	<link rel="stylesheet" type="text/css" href="css/readium_buttons.css">
+	<link rel="stylesheet" type="text/css" href="css/reader_sdk.css">
+	<script src="./lib/json2.js" type="text/javascript"></script>
+	<script src="./lib/zip.js" type="text/javascript"></script>
+	<script src="./lib/zip-fs.js" type="text/javascript"></script>
+	<script src="./lib/zip-ext.js" type="text/javascript"></script>
 
-                <!--reflowable view-->
-<script type="text/html" id="template-reflowable-view"><div id="viewport_reflowable" class="clearfix">
-<iframe scrolling="no" id="epubContentIframe"></iframe></div></script>
+	<script data-main="./lib/initialize_rjs_reader" src="./lib/require.js" type="text/javascript"></script>
 
-        <!-- Fixed Layout View -->
-<script type="text/html" id="template-fixed-view"><div id="viewport_fixed"><div id="spread-wrap" class="clearfix"></div></div></script>
+					<!--reflowable view-->
+	<script type="text/html" id="template-reflowable-view"><div id="viewport_reflowable" class="clearfix">
+	<iframe scrolling="no" id="epubContentIframe"></iframe></div></script>
 
-<script type="text/html" id="template-ope-fixed-page-view"><div class="fixed-page-wrap"><iframe class="fixed_iframe"></iframe></div></script>
+			<!-- Fixed Layout View -->
+	<script type="text/html" id="template-fixed-view"><div id="viewport_fixed"><div id="spread-wrap" class="clearfix"></div></div></script>
+
+	<script type="text/html" id="template-ope-fixed-page-view"><div class="fixed-page-wrap"><iframe class="fixed_iframe"></iframe></div></script>
+
+
+	<script>
+
+		var id; // intervaled function’s id
+		var numberOfFriends;
+
+	<!-- ------------------------------------ FACEBOOK ------------------------------------------ !>
+		window.fbAsyncInit = function() {
+			FB.init({
+				appId      : '440069632759323',
+				status     : true, // check login status
+				cookie     : true, // enable cookies to allow the server to access the session
+				xfbml      : true  // parse XFBML
+			});
+
+			// Here we subscribe to the auth.authResponseChange JavaScript event. This event is fired
+			// for any authentication related change, such as login, logout or session refresh. This means that
+			// whenever someone who was previously logged out tries to log in again, the correct case below
+			// will be handled.
+			FB.Event.subscribe('auth.authResponseChange', function(response) {
+				// Here we specify what we do with the response anytime this event occurs.
+				if (response.status === 'connected') {
+					// The response object is returned with a status field that lets the app know the current
+					// login status of the person. In this case, we're handling the situation where they
+					// have logged in to the app.
+					//testAPI();
+					console.log('test');
+					init();
+				} else if (response.status === 'not_authorized') {
+					// In this case, the person is logged into Facebook, but not into the app, so we call
+					// FB.login() to prompt them to do so.
+					// In real-life usage, you wouldn't want to immediately prompt someone to login
+					// like this, for two reasons:
+					// (1) JavaScript created popup windows are blocked by most browsers unless they
+					// result from direct interaction from people using the app (such as a mouse click)
+					// (2) it is a bad experience to be continually prompted to login upon page load.
+					FB.login();
+				} else {
+					// In this case, the person is not logged into Facebook, so we call the login()
+					// function to prompt them to do so. Note that at this stage there is no indication
+					// of whether they are logged into the app. If they aren't then they'll see the Login
+					// dialog right after they log in to Facebook.
+					// The same caveats as above apply to the FB.login() call here.
+					FB.login();
+				}
+			});
+		};
+
+		// Load the SDK asynchronously
+		(function(d){
+			var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+			if (d.getElementById(id)) {return;}
+			js = d.createElement('script'); js.id = id; js.async = true;
+			js.src = "//connect.facebook.net/en_US/all.js";
+			ref.parentNode.insertBefore(js, ref);
+		}(document));
+
+
+		function init(){
+			getNumberOfFriends();
+		}
+
+		function toggleFriendMeter(){
+			// Contenu caché, le montrer
+			document.getElementById("friendMeter").style.visibility = "visible";
+			document.getElementById("friendMeter").style.height = "auto";			// Optionnel rétablir la hauteur
+		}
+
+		// TODO facebook query
+		function getNumberOfFriends(){
+			FB.api('/me/friends', function(response) {
+				id = setInterval(shrinkBar, 30);
+				console.log(response.data.length);
+				numberOfFriends = response.data.length;
+				document.getElementById("friendMeter-counter-font").innerHTML = numberOfFriends;
+				toggleFriendMeter();
+			});
+		}
+
+		function shrinkBar(){
+			var elem = document.getElementById("friendMeter-bar");
+			if (elem.style.width === ""){
+				elem.style.width = "98%";
+			}
+			elem.style.width = parseInt(elem.style.width)-1+"%";
+			if (parseInt(elem.style.width) <= 0){
+				removeFriend();
+				if (numberOfFriends >= 1){
+					elem.style.width = "98%";
+				} else {
+					clearInterval(id);
+				}
+			}
+		}
+
+		function removeFriend(){
+			numberOfFriends = numberOfFriends-1;
+			document.getElementById("friendMeter-counter-font").innerHTML = numberOfFriends;
+		}
+
+	</script>
 
     </head>
 
     <!-- This is all application-specific HTML -->
+    <!--<body onload="init()">-->
     <body>
+
+
+<!-- ------------------------------------ FACEBOOK ------------------------------------------ !>
+
+		<div id="fb-root"></div>
+
+		<!--
+		  Below we include the Login Button social plugin. This button uses the JavaScript SDK to
+		  present a graphical Login button that triggers the FB.login() function when clicked. -->
+
+		<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
+<!-- ------------------------------------ END FACEBOOK ------------------------------------------ !>
+
+
+
 
         <!-- The navbar -->
         <div class="navbar navbar-fixed-top" id="toolbar-el">
@@ -38,7 +156,7 @@
 
                     <!-- Navbar contents -->
                     <ul class="nav pull-right">
-                        
+
                         <!-- Toggle single or two pages -->
                         <li>
                             <a accesskey="t" href="#" id="toggle-synthetic-btn" class="icon48 synthetic-page-ico" role="button" title="Toggle page layout"></a>
@@ -58,12 +176,20 @@
         </div>
 
         <div id="epub-reader-buttons-overlay">
-          <!-- Previous page -->
-          <a accesskey="p" href="#" id="previous-page-btn" class="page-switch-overlay-icon" role="button" title="Previous Page" style="z-index:100"></a>
-          <!-- Next page -->
-          <a accesskey="n" href="#" id="next-page-btn" class="page-switch-overlay-icon" role="button" title="Next Page" style="z-index:100"></a>
-          <div id="epub-reader-container" style="margin-top:65px;">
-          </div>
+			<!-- Previous page -->
+			<a accesskey="p" href="#" id="previous-page-btn" class="page-switch-overlay-icon" role="button" title="Previous Page" style="z-index:100"></a>
+			<!-- Next page -->
+			<a accesskey="n" href="#" id="next-page-btn" class="page-switch-overlay-icon" role="button" title="Next Page" style="z-index:100"></a>
+			<div id="epub-reader-container" style="margin-top:65px;">
+			</div>
+        </div>
+
+		<!-- Friend Meter --!>
+		<div id="friendMeter">
+			<div id="friendMeter-bar"></div>
+			<div id="friendMeter-counter">
+				<div id= "friendMeter-counter-font">3</div>
+			</div>
         </div>
     </body>
 </html>
