Change randomly font family and size

--- a/public/epub_content/myPoem/OEBPS/Text/text1.xhtml
+++ b/public/epub_content/myPoem/OEBPS/Text/text1.xhtml
@@ -50,11 +50,11 @@
 
 <body>
   <div class="poem">
-    <p id="adjective"></p>
-    <p id="subject"></p>
-    <p id="verb"></p>
-    <p id="adjectiveTwo"></p>
-    <p id="noun"></p>
+    <h1 id="adjective" class="center"></h1>
+    <h1 id="subject" class="center"></h1>
+    <h1 id="verb" class="center"></h1>
+    <h1 id="adjectiveTwo" class="center"></h1>
+    <h1 id="noun" class="center"></h1>
   </div>
 </body>
 </html>
