--- a/public/index.html
+++ b/public/index.html
@@ -167,12 +167,10 @@
     </head>
 
     <!-- This is all application-specific HTML -->
-    <!--<body onload="init()">-->
     <body>
 
 
 <!-- ------------------------------------ FACEBOOK ------------------------------------------ !>
-
 		<div id="fb-root"></div>
 
 		<!--
@@ -228,7 +226,7 @@
 		<div id="friendMeter">
 			<div id="friendMeter-bar"></div>
 			<div id="friendMeter-counter">
-				<div id= "friendMeter-counter-text">3</div>
+				<div id= "friendMeter-counter-text"></div>
 			</div>
 			<div id="friendMeter-friendData">
 				<div id= "friendMeter-friendData-text"></div>
