--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
 
 	<script data-main="./lib/initialize_rjs_reader" src="./lib/require.js" type="text/javascript"></script>
 
-					<!--reflowable view-->
+	<!--reflowable view-->
 	<script type="text/html" id="template-reflowable-view"><div id="viewport_reflowable" class="clearfix">
 	<iframe scrolling="no" id="epubContentIframe"></iframe></div></script>
 
-			<!-- Fixed Layout View -->
+	<!-- Fixed Layout View -->
 	<script type="text/html" id="template-fixed-view"><div id="viewport_fixed"><div id="spread-wrap" class="clearfix"></div></div></script>
 
 	<script type="text/html" id="template-ope-fixed-page-view"><div class="fixed-page-wrap"><iframe class="fixed_iframe"></iframe></div></script>
@@ -26,7 +26,6 @@
 	<script>
 
 		var id; // intervaled function’s id
-		var numberOfFriends;
 		var FB_response_object;
 		var friends = new Array();
 
@@ -131,7 +130,8 @@
 
 		function displayLostFriend(){
 			// get a name from the array
-			var index = Math.round(Math.random(0, friends.length-1));
+			var index = Math.floor(Math.random(0, friends.length));
+			console.log("index to remove :"+index);
 			var name = friends[index];
 
 			// set HTML with its name
@@ -144,7 +144,7 @@
 			console.log(friends.splice(index, 1)+" removed !");
 
 			// hide lost friend DIV
-			setTimeout(toggleFriendNameDIV, 200);
+			setTimeout(toggleFriendNameDIV, 500);
 		}
 
 		function toggleFriendNameDIV(){
