renamed folders, changed TOC

--- a/public/epub_content/goldenframe-propaganda/EPUB/goldenframe3.xhtml
+++ b/public/epub_content/goldenframe-propaganda/EPUB/goldenframe3.xhtml
@@ -6,9 +6,9 @@
 		
 
 		<meta charset="utf-8"></meta>
-		<title>vytas-propaganda</title>
+		<title>Goldenframe Propaganda</title>
 		<link rel="stylesheet" type="text/css" href="styles/style.css" class="day" title="day"/> 
-		<style> #seq img { background-image:url('sequences/1sequence.jpg');} </style>
+		<style> #seq img { background-image:url('sequences/3sequence.jpg');} </style>
 		
  		<script type="text/javascript">
 			//<![CDATA[[
