--- a/public/epub_content/goldenframe-propaganda/EPUB/nav.xhtml
+++ b/public/epub_content/goldenframe-propaganda/EPUB/nav.xhtml
@@ -8,16 +8,12 @@
 	<body>
 		<nav epub:type="toc" id="toc">			
 			<ol>
-				<li><a href="content.xhtml#ch1">I. Welcome</a></li>
+				<li><a href="content.xhtml">Golden Frame 1</a></li>
+				<li><a href="goldenframe2.xhtml">Golden Frame 2</a></li>
+				<li><a href="goldenframe3.xhtml">Golden Frame 3</a></li>
+				<li><a href="goldenframe4.xhtml">Golden Frame 4</a></li>
+				<li><a href="goldenframe5.xhtml">Golden Frame 5</a></li>
 			</ol>			
-		</nav>
-		<nav epub:type="landmarks">
-			<ol>
-				<li><a epub:type="frontmatter" href="content.xhtml#frontmatter"
-						>frontmatter</a></li>
-				<li><a epub:type="bodymatter" href="content.xhtml#bodymatter"
-						>bodymatter</a></li>
-			</ol>
 		</nav>
 	</body>
 </html>
