--- a/public/epub_content/goldenframe-propaganda/EPUB/goldenframe3.xhtml
+++ b/public/epub_content/goldenframe-propaganda/EPUB/goldenframe3.xhtml
@@ -41,6 +41,43 @@
                 }
             }
 
+	    function onDeviceOrientationChange(event) {
+                lastOrientation.gamma = event.gamma;
+                lastOrientation.beta = event.beta;
+            }
+
+            function onRenderUpdate(event) {
+                var xDelta, yDelta;
+                switch (window.orientation) {
+                    case 0:
+			xDelta = lastOrientation.gamma;
+                        yDelta = lastOrientation.beta;
+                        break;
+                    case 180:
+                        xDelta = lastOrientation.gamma * -1;
+                        yDelta = lastOrientation.beta * -1;
+                        break;
+                    case 90:
+                        xDelta = lastOrientation.beta;
+                        yDelta = lastOrientation.gamma * -1;
+                        break;
+                    case -90:
+                        xDelta = lastOrientation.beta * -1;
+                        yDelta = lastOrientation.gamma;
+                        break;
+                    default:
+                        xDelta = lastOrientation.gamma;
+                        yDelta = lastOrientation.beta;
+                }
+                
+               	  if(xDelta > 0){
+                	moveSequence(true);
+                }
+                else if(xDelta < 0){
+                	moveSequence(false);
+                }
+            }
+
             function onMouseMove(event) {
                 var xDelta, yDelta;
                 if (navigator.webkitPointer && navigator.webkitPointer.isLocked) {
